--- a/Graphics.ipynb
+++ b/Graphics.ipynb
@@ -142,6 +142,8 @@
     "    \n",
     "plt.xlabel('Number of SPARQL EndPoints', fontsize = 20)\n",
     "\n",
+    "plt.ylabel('Number of repositories', fontsize = 20)\n",
+    "\n",
     "plt.tight_layout() \n",
     "plt.savefig(\"SPARQLEndpoints.png\", dpi=199)"
    ]
