--- a/Graphics.ipynb
+++ b/Graphics.ipynb
@@ -20,7 +20,7 @@
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "data = '/mnt/main_disck/irene/Desktop/KHAOS/lod/lod-data.json'\n",
+    "data = '/KHAOS/lod/lod-data.json'\n",
     "\n",
     "final_data = pd.read_json(data, orient='index')"
    ]
